--- a/styles/root.css
+++ b/styles/root.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 :root {
-    --fonte-principal: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --fonte-principal: Ubuntu, sans-serif;
     --cor-background: #5f2c82;
     --cor-input: #94CFCD;
     --cor-submit: #53aaa7;
