--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@ main > section#login {
     border-radius: 10px;
     width: 250px;
     height: 515px;
-    overflow: hidden;
     box-shadow: 0px 0px 10px #00000080;
 }
 
@@ -39,6 +38,7 @@ main > section#login > div#imagem {
     background-size: cover;
     height: 200px;
     max-width: 100%;
+    border-radius: 10px 10px 0 0;
 }
 
 main > section#login > div#formulario {
