substituição de position por flexbox

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,14 +18,12 @@ body {
 }
 
 main {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main > section#login {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     border-radius: 10px;
     width: 250px;
